<resources>
    <string name="app_name">NemergentTest</string>
    <string name="picture_action">Take picture</string>
    <string name="ping_action">Open ping window</string>
    <string name="ping_start_button">Start</string>
    <string name="ping_stop_button">Stop</string>
    <string name="num_tries_hint">Enter the number of tries you want to execute</string>
    <string name="successes">Successes</string>
    <string name="failures">Failures</string>
    <string name="close">Close</string>
    <string name="not_value_error">Please enter a value</string>
    <string name="pic_preview" translatable="false">Pic preview</string>
    <string name="delete_confirmation_title">Delete</string>
    <string name="delete_confirmation_text">Do you want to delete the picture?</string>
</resources>