<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/numTriesHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_tries_hint" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/numTriesEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="0"
            tools:ignore="LabelFor" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping_start_button" />
        <View
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping_stop_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/SuccessesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successes" />

        <View
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/FailuresText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failures" />
    </LinearLayout>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/close" />

</LinearLayout>